# hyper_lang

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Paths  README.md  meson.build
Source/: CMakeLists.txt
Source/Hyper/: CMakeLists.txt
Source/Hyper/include/: colors.h  config.h  errors.h  lexer.h  logger.h  token.h  utils.h
Source/Hyper/include/Hyper/: Compiler.hpp  Diagnostics.hpp  FixedString.hpp  Formatter.hpp  Hasher.hpp  Identifier.hpp  Lexer.hpp  Logger.hpp  Parser.hpp  SourceRange.hpp  Symbol.hpp  Token.hpp  Type.hpp  Utils.hpp  Validator.hpp
Source/Hyper/include/Hyper/Ast/: AstNode.hpp  Declaration.hpp  Expression.hpp  Literal.hpp  Statement.hpp
Source/Hyper/include/Hyper/Validators/: ScopeValidator.hpp  TypeValidator.hpp
Source/Hyper/src/: lexer.c  logger.c  main.c  main.cpp  token.c  utils.c
Source/Hyper/src/Hyper/: Compiler.cpp  Diagnostics.cpp  Lexer.cpp  Parser.cpp  Token.cpp  Utils.cpp  Validator.cpp
Source/Hyper/src/Hyper/Ast/: AstNode.cpp  Declaration.cpp  Expression.cpp  Literal.cpp  Statement.cpp
Source/Hyper/src/Hyper/Validators/: ScopeValidator.cpp  TypeValidator.cpp
Source/Hyper/tests/: main.hyper  test_00.hyper  test_01.hyper  test_02.hyper  test_03.hyper  test_04.hyper  test_05.hyper  test_06.hyper  test_07.hyper  test_08.hyper  test_09.hyper
Source/HyperCompiler/: CMakeLists.txt
Source/HyperCompiler/include/HyperCompiler/: BuildOptions.hpp  Compiler.hpp  LLVMGenerator.hpp  Lexer.hpp  Linker.hpp  Logger.hpp  Parser.hpp  Token.hpp
Source/HyperCompiler/include/HyperCompiler/Ast/: AstNode.hpp  Declarations.hpp  Expressions.hpp  Literals.hpp  Statements.hpp  Value.hpp
Source/HyperCompiler/include/HyperCompiler/Utils/: Assertion.hpp  PlatformDetection.hpp  (+2 more)
Source/HyperCompiler/src/: main.cpp
Source/HyperCompiler/src/HyperCompiler/: Compiler.cpp  LLVMGenerator.cpp  Lexer.cpp  Linker.cpp  Logger.cpp  Parser.cpp  Token.cpp
Source/HyperCompiler/tests/: 00.hyper  01.hyper
Source/HyperLib/sys/: math.hyper  memory.hyper
Source/examples/: comparisons.hyper  for.hyper  function.hyper  if.hyper  main.hyper  mutable.hyper  print.hyper  while.hyper
Source/include/Hyper/: Colors.hpp  Compiler.hpp  DataType.hpp  Diagnostics.hpp  Formatter.hpp  Generator.hpp  Lexer.hpp  Linker.hpp  LinkerFinder.hpp  Logger.hpp  Operators.hpp  Parser.hpp  Prerequisites.hpp  Scanner.hpp  SourceLocation.hpp  Target.hpp  Token.hpp  Type.hpp  Types.hpp
Source/include/Hyper/Ast/: AstFormatter.hpp  AstNode.hpp  Forward.hpp
Source/include/Hyper/Generators/: CGenerator.hpp  Generator.hpp
Source/src/: main.cpp
Source/src/Hyper/: Compiler.cpp  DataType.cpp  Diagnostics.cpp  Generator.cpp  Lexer.cpp  Linker.cpp  LinkerFinder.cpp  Logger.cpp  Parser.cpp  Scanner.cpp  SourceLocation.cpp  Token.cpp  Types.cpp
Source/src/Hyper/Ast/: AstFormatter.cpp  AstNode.cpp
Source/src/Hyper/Generators/: CGenerator.cpp  Generator.cpp
Source/tests/: main.hyper
compiler/hyperc/: Cargo.toml
compiler/hyperc/src/: main.rs
compiler/hyperc_diagnostics/: Cargo.toml
compiler/hyperc_diagnostics/src/: annotation.rs  errors.rs  lib.rs  report.rs
compiler/hyperc_lexer/: Cargo.toml
compiler/hyperc_lexer/src/: lib.rs  tests.rs  token.rs
compiler/hyperc_parser/: Cargo.toml
compiler/hyperc_span/: Cargo.toml
compiler/hyperc_span/src/: lib.rs
hyper/: CMakeLists.txt
hyper/include/hyper/: Parser.hpp  c_generator.hpp  compiler.hpp  data_type.hpp  diagnostics.hpp  formatter.hpp  identifier.hpp  lexer.hpp  logger.hpp  parser.hpp  post_symbol_collector.hpp  scope_validator.hpp  source_range.hpp  symbol.hpp  symbol_collector.hpp  token.hpp  utilities.hpp
hyper/include/hyper/ast/: Expression.hpp  Statement.hpp  ast.hpp  ast_node.hpp  ast_visitor.hpp  declaration.hpp  forward.hpp  literal.hpp
hyper/include/hyper/c/: c_compiler.hpp  c_generator.hpp  c_linker.hpp  microsoft.hpp
hyper/include/hyper/utilities/: args_parser.hpp  assertions.hpp  debugging.hpp  platform_detection.hpp  source_location.hpp
hyper/include/hyper/validators/: scope_validator.hpp  type_validator.hpp
hyper/src/: main.cpp
hyper/src/hyper/: Diagnostics.cpp  c_generator.cpp  compiler.cpp  data_type.cpp  diagnostics.cpp  lexer.cpp  parser.cpp  post_symbol_collector.cpp  scope_validator.cpp  symbol_collector.cpp  token.cpp  type_validator.cpp  utilities.cpp
hyper/src/hyper/ast/: Declaration.cpp  Expression.cpp  Literal.cpp  ast_node.cpp  statement.cpp
hyper/src/hyper/c/: c_compiler.cpp  c_generator.cpp  c_linker.cpp  microsoft.cpp
hyper/src/hyper/utilities/: args_parser.cpp  assertions.cpp  debugging.cpp
hyper/src/hyper/validators/: scope_validator.cpp  type_validator.cpp
hyper_test/: CMakeLists.txt
hyper_test/include/hyper/: logger.hpp  tester.hpp
hyper_test/src/: main.cpp
hyper_test/src/hyper/: formatter.cpp  tester.cpp
hyper_test/tests/declarations/: export_declaration.test.hyper  extern_declaration.test.hyper  function_declaration.test.hyper  import_declaration.test.hyper  parameter_declaration.test.hyper  public_declaration.test.hyper  variable_declaration.test.hyper
hyper_test/tests/expressions/: binary_expression.test.hyper  call_expression.test.hyper  cast_expression.test.hyper  conditional_expression.test.hyper  identifier_expression.test.hyper  unary_expression.test.hyper
hyper_test/tests/literals/: bool_literal.test.hyper  floating_literal.test.hyper  integer_literal.test.hyper  string_literal.test.hyper
hyper_test/tests/statements/: assign_statement.test.hyper  compound_assign_statement.test.hyper  expression_statement.test.hyper  if_statement.test.hyper  print_statement.test.hyper  return_statement.test.hyper  while_statement.test.hyper
hyper_utilities/: CMakeLists.txt
hyper_utilities/include/hyper_utilities/: args_parser.hpp  assertions.hpp  debugging.hpp  expected.hpp  formatter.hpp  logger.hpp  non_null_unique_ptr.hpp  platform_detection.hpp  profiler.hpp  source_location.hpp  utilities.hpp
hyper_utilities/src/hyper_utilities/: args_parser.cpp  assertions.cpp  profiler.cpp  utilities.cpp
(+248 files in other folders)
