#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-present, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Cmake Info
#-------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.15)
project(Hyper LANGUAGES C CXX)

#-------------------------------------------------------------------------------------------
# Modules
#-------------------------------------------------------------------------------------------
include(cmake/standard_project_settings.cmake)

#-------------------------------------------------------------------------------------------
# Project Libraries
#-------------------------------------------------------------------------------------------
add_library(project_options INTERFACE)
target_compile_features(project_options INTERFACE cxx_std_20)

add_library(project_warnings INTERFACE)

#-------------------------------------------------------------------------------------------
# Standard Settings
#-------------------------------------------------------------------------------------------
include(cmake/cache.cmake)

include(cmake/compiler_warnings.cmake)
enable_warnings(project_warnings)

include(cmake/sanitizers.cmake)
enable_sanitizers(project_options)

include(cmake/doxygen.cmake)
enable_doxygen()

include(cmake/static_analyzers.cmake)

#-------------------------------------------------------------------------------------------
# Options
#-------------------------------------------------------------------------------------------
option(ENABLE_PROFILING OFF)

#-------------------------------------------------------------------------------------------
# Hyper Utilities
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_utilities)

#-------------------------------------------------------------------------------------------
# Hyper
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper)
