#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
fern = { version = "0.6", features = [ "colored" ] }
log = "0.4"

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
