#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[workspace]
members = [
    "compiler/hyperc",
    "compiler/hyperc_diagnostics",
    "compiler/hyperc_lexer",
    "compiler/hyperc_parser"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
